# splitwise-sync

./: .gitignore  README.md  flake.nix  img.sh  ksvc.yaml  publisher.k8s.yaml
server/: Cargo.toml
server/src/: discord.rs  main.rs
server/src/cmd/: batch_publish.rs  mod.rs  publish.rs  server.rs
server/src/handlers/: interactions.rs  mod.rs  reflector.rs
server/src/models/: mint.rs
