[package]
name = "splitwise-sync"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }

ed25519-compact = "2"
once_cell = "1"
hex = "0"
twilight-model = "0.15"
twilight-http = "0.15"
twilight-util = { version = "0.15", features = ["builder"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
regex = "1"
splitwise = "0"
chrono = { version = "0.4", default-features = false, features = [
  "std",
  "serde",
  "clock",
] }
